# lispp-template

./: .gitignore  CMakeLists.txt  README.md  fuse_src.py  main.cpp
lispp/: example.cpp  example.h
test/: lisp_test.cpp  lisp_test.h  test_boolean.cpp  test_control_flow.cpp  test_eval.cpp  test_integer.cpp  test_lambda.cpp  test_list.cpp  test_symbol.cpp
test/gmock/: gmock-gtest-all.cc  gmock_main.cc
test/gmock/gtest/: gtest.h
